[project]
name = "rdp-lottery"
version = "0.1.0"
description = "Local network RDP scanner with web UI and Bluesky announcements"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-nmap>=0.7.1",
    "atproto>=0.0.55",
    "vncdotool>=1.2.0",
    "playwright>=1.40.0",
    "tomli>=2.0.0;python_version<'3.11'",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
